--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,20 @@
-.bg-royalblue {
-  background-color: royalblue;
+.bg-orientalBlue {
+  background-color: #26499d;
+}
+
+.hover {
+  cursor: pointer;
+}
+
+.hover:hover {
+  opacity: 0.7;
+}
+
+.selectItem {
+  background-color: #26499d;
+  cursor: pointer;
+}
+
+.selectItem:hover {
+  border: solid 2px gold;
 }
