feat: 初期状態のメイン画面を描画

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
-.bg-steelblue {
-  background-color: steelblue;
+.bg-cornflowerblue {
+  background-color: cornflowerblue;
 }
 
 .hover {
@@ -11,7 +11,7 @@
 }
 
 .selectItem {
-  background-color: steelblue;
+  background-color: cornflowerblue;
   cursor: pointer;
 }
 
